--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,5 +24,5 @@ jobs:
         shell: bash
 
       - name: Checking
-        run: if src/test_*.py 2> /dev/null; then python3 -m pytest src; fi
+        run: if src/*_test.py 2> /dev/null; then python3 -m pytest src; fi
         shell: bash
